@@ -8,6 +8,7 @@ package vavi.sound.smaf.chunk;
 
 import java.io.DataInput;
 import java.io.DataInputStream;
+import java.io.EOFException;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
@@ -21,6 +22,7 @@ import vavi.util.ByteUtil;
 import vavi.util.properties.PrefixedPropertiesFactory;
 
 import static java.lang.System.getLogger;
+import static vavi.sound.smaf.chunk.Chunk.DumpContext.getDC;
 
 
 /**
@@ -58,7 +60,7 @@ public abstract class Chunk {
      * TODO Chunk -> constructor ???
      *      because of passing the parent
      */
-    protected abstract void init(MyDataInputStream dis, Chunk parent)
+    protected abstract void init(CrcDataInputStream dis, Chunk parent)
         throws InvalidSmafDataException, IOException;
 
     /** Chunk ID */
@@ -91,7 +93,7 @@ public abstract class Chunk {
         throws InvalidSmafDataException, IOException {
 
         DataInputStream dis;
-        if (is instanceof MyDataInputStream mdis) {
+        if (is instanceof CrcDataInputStream mdis) {
             dis = new DataInputStream(mdis.is);
         } else {
             dis = new DataInputStream(is);
@@ -101,28 +103,28 @@ public abstract class Chunk {
         dis.readFully(id); // not want to count down
 
         int size = dis.readInt();
-logger.log(Level.DEBUG, String.format("size: 0x%1$08x (%1$d)", size));
+logger.log(Level.DEBUG, "size: 0x%1$08x (%1$d)".formatted(size));
 
         Chunk chunk = newInstance(id, size);
 //logger.log(Level.TRACE, chunk.getClass().getName() + "\n" + StringUtil.getDump(is, 0, 128));
-//logger.log(Level.TRACE, String.format("is: " + is + " / " + chunk.getClass().getName()));
-        MyDataInputStream mdis = new MyDataInputStream(is, id, size);
-//logger.log(Level.TRACE, String.format("mdis: " + mdis + " / " + chunk.getClass().getName()));
+//logger.log(Level.TRACE, "is: " + is + " / " + chunk.getClass().getName());
+        CrcDataInputStream mdis = new CrcDataInputStream(is, id, size);
+//logger.log(Level.TRACE, "mdis: " + mdis + " / " + chunk.getClass().getName());
         chunk.init(mdis, parent);
 
         if (parent != null) {
             // for reading inside the parent loop
-            if (is instanceof MyDataInputStream) {
-                mdis = (MyDataInputStream) is;
+            if (is instanceof CrcDataInputStream) {
+                mdis = (CrcDataInputStream) is;
                 mdis.readSize -= 8 + chunk.getSize();
             } else {
                 assert false : "is: " + is.getClass().getName();
             }
         } else {
-//logger.log(Level.TRACE, String.format("crc (calc): %04x, avail: %d, %s, %s", mdis.crc(), mdis.available(), mdis, chunk.getClass().getName()));
+//logger.log(Level.TRACE, "crc (calc): %04x, avail: %d, %s, %s".formatted(mdis.crc(), mdis.available(), mdis, chunk.getClass().getName()));
             if (chunk instanceof FileChunk fc) {
                 if (fc.getCrc() != mdis.crc()) {
-logger.log(Level.WARNING, String.format("crc not match expected: %04x, actual: %04x", fc.getCrc(), mdis.crc()));
+logger.log(Level.WARNING, "crc not match expected: %04x, actual: %04x".formatted(fc.getCrc(), mdis.crc()));
                 }
             }
         }
@@ -136,19 +138,19 @@ logger.log(Level.WARNING, String.format("crc not match expected: %04x, actual: %
     // ----
 
     /** input stream with count down, crc */
-    protected static class MyDataInputStream extends InputStream implements DataInput {
+    protected static class CrcDataInputStream extends InputStream implements DataInput {
         final InputStream is;
         final DataInputStream dis;
         int readSize;
         static final ThreadLocal<CRC16> crc = new ThreadLocal<>();
 
-        protected MyDataInputStream(InputStream is, byte[] id, int size) {
-            if (is instanceof MyDataInputStream mdis) {
+        protected CrcDataInputStream(InputStream is, byte[] id, int size) {
+            if (is instanceof CrcDataInputStream mdis) {
                 this.is = mdis.is;
             } else {
                 this.is = is;
             }
-//logger.log(Level.TRACE, String.format("is: " + this.is));
+//logger.log(Level.TRACE, "is: " + this.is);
             this.dis = new DataInputStream(this.is);
             this.readSize = size;
 
@@ -162,8 +164,7 @@ logger.log(Level.WARNING, String.format("crc not match expected: %04x, actual: %
 //logger.log(Level.TRACE, "crc len: " + crc.get().getCount());
             return crc.get().getValue();
         }
-        @Override
-        public long skip(long n) throws IOException {
+        @Override public long skip(long n) throws IOException {
             throw new UnsupportedOperationException();
         }
         @Override
@@ -174,21 +175,20 @@ logger.log(Level.WARNING, String.format("crc not match expected: %04x, actual: %
         public int readUnsignedByte() throws IOException {
             int r = dis.readUnsignedByte();
             crc.get().update((byte) r);
-            readSize--;
+            consume(1);
             return r;
         }
         @Override
         public void readFully(byte[] b) throws IOException {
             dis.readFully(b, 0, b.length);
             crc.get().update(b);
-            readSize -= b.length;
+            consume(b.length);
         }
         @Override
         public int read() throws IOException {
             return is.read();
         }
-        @Override
-        public void readFully(byte[] b, int off, int len) throws IOException {
+        @Override public void readFully(byte[] b, int off, int len) throws IOException {
             throw new UnsupportedOperationException();
         }
         @Override
@@ -196,19 +196,16 @@ logger.log(Level.WARNING, String.format("crc not match expected: %04x, actual: %
             byte[] b = new byte[n];
             dis.readFully(b);
             crc.get().update(b);
-            readSize -= n;
+            consume(n);
             return n;
         }
-        @Override
-        public boolean readBoolean() throws IOException {
+        @Override public boolean readBoolean() throws IOException {
             throw new UnsupportedOperationException();
         }
-        @Override
-        public byte readByte() throws IOException {
+        @Override public byte readByte() throws IOException {
             throw new UnsupportedOperationException();
         }
-        @Override
-        public short readShort() throws IOException {
+        @Override public short readShort() throws IOException {
             throw new UnsupportedOperationException();
         }
         @Override
@@ -219,36 +216,34 @@ logger.log(Level.WARNING, String.format("crc not match expected: %04x, actual: %
                 // and this condition assumed to get crc uses this method.
                 crc.get().update(ByteUtil.getBeBytes((short) r));
             }
-            readSize -= 2;
+            consume(2);
             return r;
         }
-        @Override
-        public char readChar() throws IOException {
+        @Override public char readChar() throws IOException {
             throw new UnsupportedOperationException();
         }
-        @Override
-        public int readInt() throws IOException {
+        @Override public int readInt() throws IOException {
             throw new UnsupportedOperationException();
         }
-        @Override
-        public long readLong() throws IOException {
+        @Override public long readLong() throws IOException {
             throw new UnsupportedOperationException();
         }
-        @Override
-        public float readFloat() throws IOException {
+        @Override public float readFloat() throws IOException {
             throw new UnsupportedOperationException();
         }
-        @Override
-        public double readDouble() throws IOException {
+        @Override public double readDouble() throws IOException {
             throw new UnsupportedOperationException();
         }
-        @Override
-        public String readLine() throws IOException {
+        @Override public String readLine() throws IOException {
             throw new UnsupportedOperationException();
         }
-        @Override
-        public String readUTF() throws IOException {
+        @Override public String readUTF() throws IOException {
             throw new UnsupportedOperationException();
+        }
+        private void consume(int decrement) throws EOFException {
+            readSize -= decrement;
+            if (readSize < 0)
+                throw new EOFException();
         }
     }
 
@@ -309,17 +304,17 @@ logger.log(Level.WARNING, String.format("crc not match expected: %04x, actual: %
         public int getCount() {
             return count;
         }
-}
+    }
+
     // ----
 
     /**
      * factory
      * @param id a chunk id read
-     * @param size
+     * @param size chunk size
      * @return chunk
      */
-    private static Chunk newInstance(byte[] id, int size)
-        throws InvalidSmafDataException {
+    private static Chunk newInstance(byte[] id, int size) throws InvalidSmafDataException {
 
         try {
             return chunkFactory.get(id).newInstance(id, size);
@@ -347,7 +342,7 @@ logger.log(Level.ERROR, e.getMessage(), e);
                 @Override
                 public Constructor<? extends Chunk> get(byte[] id) {
                     String type = new String(id);
-logger.log(Level.DEBUG, String.format("Chunk ID(read): %s+0x%02x", (Character.isLetterOrDigit(type.charAt(3)) ? type : new String(id, 0, 3)), (int) type.charAt(3)));
+logger.log(Level.DEBUG, "Chunk ID(read): " + (Character.isLetterOrDigit(type.charAt(3)) ? type : "%s+0x%02x".formatted(new String(id, 0, 3), (int) type.charAt(3) & 0xff)));
 
                     for (String key : instances.keySet()) {
                         if (key.charAt(3) == '*' && key.substring(0, 3).equals(type.substring(0, 3))) {
@@ -378,4 +373,33 @@ logger.log(Level.DEBUG, String.format("Chunk ID(read): %s+0x%02x", (Character.is
                     return key.substring(keyBase.length());
                 }
             };
+
+    // ----
+
+    /** indentation management */
+    protected static class DumpContext implements AutoCloseable /* i know this is abuse. */ {
+        /** indentation management store */
+        private static ThreadLocal<DumpContext> dc = new ThreadLocal<>();
+
+        static final String indent = " ".repeat(4);
+        int depth = 0;
+        String indent() { return indent.repeat(depth); }
+        DumpContext open() { depth++; return this; }
+        @Override public void close() { depth--; }
+
+        /** Gets indentation manager */
+        static DumpContext getDC() {
+            if (dc.get() == null)
+                dc.set(new DumpContext());
+            return dc.get();
+        }
+
+        /** Gets indented string. */
+        String format(String x) { return getDC().indent() + " +--- " + x + "\n"; }
+    }
+
+    @Override
+    public String toString() {
+        return getDC().format(getId());
+    }
 }
