@@ -56,7 +56,7 @@ logger.log(Level.DEBUG, "GraphicsTrackSequenceData[" + sequenceNumber + "]: " + 
     }
 
     @Override
-    protected void init(MyDataInputStream dis, Chunk parent)
+    protected void init(CrcDataInputStream dis, Chunk parent)
         throws InvalidSmafDataException, IOException {
 
         FormatType formatType = ((TrackChunk) parent).getFormatType();
@@ -117,8 +117,8 @@ logger.log(Level.DEBUG, "messages: " + messages.size());
                 int size = MidiUtil.readVariableLength(dis);
                 byte[] data = new byte[size];
                 dis.readFully(data);
-                smafMessage = new UndefinedMessage(duration);
-logger.log(Level.DEBUG, String.format("reserved: %02x", e1));
+                smafMessage = new UndefinedMessage(e1, -1, duration);
+logger.log(Level.DEBUG, "reserved: %02x".formatted(e1));
               } break;
             }
 
